[package]
name = "delvers"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.dev]
opt-level = 1
